Реализация панели админа и DTO-классов.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -36,6 +36,8 @@
             <a href="complete-rental.html">Complete Rental</a>
             <br/>
             <a href="account.html">Your Account</a>
+            <br/>
+            <a href="admin.html">Admin Panel</a>
         </div>
     </div>
 </body>
