Реализация генерации и хранения секрета через Spring Cloud Vault и Hashicorp Vault. Реализация кэширования через Spring Cache на основе Redis. Изменение окружения для Spring Context интеграционных тестов добавлением новых контейнеров, запускаемых при помощи Testcontainer.

--- a/src/main/resources/static/cars.html
+++ b/src/main/resources/static/cars.html
@@ -8,24 +8,45 @@
     <script src="js/cars.js" defer></script>
 </head>
 <body>
-    <div class="container">
-        <h1>All Cars</h1>
-        <table id="carsTable">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Brand</th>
-                    <th>Model</th>
-                    <th>Year</th>
-                    <th>Rental Price</th>
-                    <th>Status</th>
-                </tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
-        
-        <a href="index.html">Back to Available Cars</a>
+<div class="container">
+    <h1>All Cars</h1>
+    <table id="carsTable">
+        <thead>
+        <tr>
+            <th>ID</th>
+            <th>Brand</th>
+            <th>Model</th>
+            <th>Year</th>
+            <th>Rental Price</th>
+            <th>Status</th>
+        </tr>
+        </thead>
+        <tbody id="carsTableBody">
+        </tbody>
+    </table>
+
+    <a href="index.html">Back to Available Cars</a>
+</div>
+
+<div id="detailsModal" class="modal">
+    <div class="modal-content">
+        <span class="close-button" id="closeModalButton">&times;</span>
+        <h2 id="modalCarTitle">Car Details</h2>
+        <div id="modalCarDetails"></div>
+        <hr>
+        <h3>Reviews</h3>
+        <div id="modalCarReviews"></div>
+        <hr>
+        <h3>Leave a Review</h3>
+        <form id="reviewForm">
+            <input type="hidden" id="reviewCarId">
+            <label for="rating">Rating (1-5):</label>
+            <input type="number" id="rating" min="1" max="5" required>
+            <label for="comment">Comment:</label>
+            <textarea id="comment" rows="3" required></textarea>
+            <button type="submit">Submit</button>
+        </form>
     </div>
+</div>
 </body>
 </html>
